--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "lf",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
+  "name": "my-electron-app",
+  "version": "1.0.0",
+  "description": "Hello World!",
+  "main": "main.js",
   "scripts": {
-    "tauri": "tauri"
+    "start": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Jane Doe",
+  "license": "MIT",
   "devDependencies": {
-    "@tauri-apps/cli": "^2"
+    "electron": "23.1.3"
   }
 }
