--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "my-electron-app",
-  "version": "1.0.0",
-  "description": "Hello World!",
-  "main": "main.js",
+  "name": "life",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tauri": "tauri"
   },
-  "author": "Jane Doe",
-  "license": "MIT",
   "devDependencies": {
-    "electron": "23.1.3"
+    "@tauri-apps/cli": "^2"
   }
 }
