--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jane Doe",
   "license": "MIT",
   "devDependencies": {
-    "electron": "23.1.3"
+    "electron": "23.1.3",
+    "electron-builder": "^26.0.12"
   }
 }
