--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "my-electron-app",
+  "displayName": "Own Life",
+  "name": "own-life",
   "version": "1.0.0",
-  "description": "Hello World!",
+  "description": "Productive app. Show life progress.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jane Doe",
+  "author": "Pirtocla, Inc.",
   "license": "MIT",
   "devDependencies": {
     "electron": "23.1.3",
     "electron-builder": "^26.0.12"
+  },
+  "build": {
+    "productName": "Own Life",
+    "nsis": {
+      "artifactName": "ownlife.setup.${version}.${ext}",
+      "uninstallDisplayName": "OwnLife"
+    }
   }
 }
